# classtojs

./: Cargo.toml  README.md  index.html
src/: main.rs  transform.rs
src/codegen/: function.rs  mangle.rs  mod.rs  util.rs
src/ir/: class.rs  function.rs  mod.rs  module.rs  natives.rs
src/parser/: code.rs  flow.rs  mod.rs  ssa.rs  types.rs
src/pass/: devirtualize.rs  mod.rs  reachability.rs
