[package]
name = "classtojs"
version = "0.1.0"
edition = "2018"

[dependencies]
cached = "0.25.0"
clap = "2.33.3"
noak = { git = "https://gitlab.com/frozo/noak.git", rev = "3686701d" }
relooper = "0.1.0"
serde = "1.0.130"
serde_derive = "1.0.130"
swc_common = "0.12.0"
swc_ecma_ast = "0.52.0"
swc_ecma_codegen = "0.70.2"
swc_ecma_minifier = "0.27.2"
swc_ecma_transforms = "0.71.1"
swc_ecma_utils = "0.44.2"
swc_ecma_visit = "0.38.1"
toml = "0.5.8"
ustr = { git = "https://github.com/zigazeljko/ustr", rev = "f14bc4e5", features = ["serialization"] }
zip = "0.5.13"

[profile.dev]
opt-level = 2
debug = false
